--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,9 @@ spring.datasource.connection-test-query=select 1 from dual
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
