--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.jdbc-url= jdbc:mysql://localhost:3306/restraunt?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=meandmine12
+spring.datasource.password=
 spring.datasource.pool-name=restraunt-service-db-pool
 spring.datasource.connection-timeout=60000
 spring.datasource.idle-timeout=30000
